--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 thesis_extracode_future_reference.R
 thesis_pastactionregmodel.csv
 thesis_intermediate_exploring_viz.R
-
+thesis_analysis_markdown.html
 
 .DS_Store
 /old
